Fix Popup Arrow Spacing, Add FIXME

--- a/gnome-shell.css
+++ b/gnome-shell.css
@@ -17,6 +17,8 @@
  * Inc., 51 Franklin St - Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
+/* FIXME: Super + Tab Window Title needs to be #333 instead of white */
+
 /* Text Styles */
 
 /* default text style */
@@ -126,7 +128,7 @@ StScrollBar StButton#vhandle:active {
 }
 .popup-menu-boxpointer,
 .candidate-popup-boxpointer {
-  -arrow-border-radius: 2px;
+  -arrow-border-radius: 6px; /* actually, this is the spacing */
   -arrow-background-color: rgba(255, 255, 255, 0.95);
   -arrow-border-width: 1px;
   -arrow-border-color: rgba(0, 0, 0, 0.05);
@@ -1223,7 +1225,7 @@ StEntry:focus {
   min-height: 159px;
 }
 .summary-boxpointer {
-  -arrow-border-radius: 2px;
+  -arrow-border-radius: 6px; /* actually, this is the spacing */
   -arrow-background-color: rgba(255, 255, 255, 0.95);
   -arrow-border-width: 1px;
   -arrow-border-color: rgba(0, 0, 0, 0.05);
